- Apply EmbeddingsRedundantFilter, ContextualCompressionRetriever to reduce duplication and unrelevant source docs - format source doc - Use RecursiveCharacterTextSplitter to have better result

--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,10 @@ div[data-testid="stSidebarContent"] {
 }
 
 
+div[data-testid="stHeadingDivider"] {
+    background-color: #aa322f;
+}
+
 div[data-testid="stImage"] {
     text-align: center;
     display: block;
